fix(tabs): text alignment

--- a/src/app/shared/components/tabs/tabs.component.scss
+++ b/src/app/shared/components/tabs/tabs.component.scss
@@ -34,6 +34,7 @@
 
     border-radius: 8px;
     color: white;
+    line-height: 1;
     z-index: 1;
     transition: color 0.4s ease-in-out,background-color 0.1s ease-in;
 
